--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -51,7 +51,7 @@ a:hover {
 	border-color: white;
 }
 main {
-	width: 850px;
+	max-width: 850px;
 	margin-top: 35px;
 	margin-bottom: 35px;
 	margin-right: auto;
